--- a/scss/sections/__onde-encontrar.scss
+++ b/scss/sections/__onde-encontrar.scss
@@ -108,7 +108,7 @@
                 margin-top: -7px;
 
                 @supports (-webkit-touch-callout: none) {
-                        margin-top: 5px;
+                        margin-top: 45px;
                   }
             }
         }
